# aether-core

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
aether-cli/: Cargo.toml
aether-cli/src/: main.rs
aether-core/: Cargo.toml
aether-core-gen/: Cargo.toml  build.rs
aether-core/migrations/: 20250208161309_cache.sql
aether-core/src/: config.rs  error.rs  lib.rs
aether-core/src/api/: auth.rs  credentials.rs  java.rs  jre.rs  metadata.rs  mod.rs  plugin.rs  process.rs  settings.rs
aether-core/src/api/instance/: content.rs  create.rs  crud.rs  helpers.rs  import.rs  launch.rs  mod.rs  utils.rs
aether-core/src/core/: error.rs  launcher_state.rs  mod.rs
aether-core/src/core/domain/: error.rs  host_result.rs  launcher_state.rs  lazy_locator.rs  mod.rs  service_locator.rs
aether-core/src/event/: emit.rs  event_state.rs  events.rs  loading.rs  mod.rs  process.rs  utils.rs
aether-core/src/features/: mod.rs
aether-core/src/features/auth/: mod.rs
aether-core/src/features/auth/app/: create_offline_account.rs  get_accounts.rs  logout.rs  mod.rs  service.rs  set_active_account.rs
aether-core/src/features/auth/core/: credentials_storage.rs  error.rs  mod.rs
aether-core/src/features/auth/domain/: error.rs  mod.rs  storage.rs
aether-core/src/features/auth/infra/: fs_credentials_storage.rs  mod.rs
aether-core/src/features/auth/tests/: create_offline_account_test.rs  get_accounts_test.rs  logout_test.rs  mod.rs  set_active_account_test.rs
aether-core/src/features/events/: mod.rs
aether-core/src/features/events/app/: emit_instance.rs  emit_loading.rs  emit_process.rs  emit_warning.rs  loading_try_for_each_concurrent.rs  mod.rs  progress_service.rs
aether-core/src/features/events/core/: loading.rs  process.rs
aether-core/src/features/events/domain/: emit.rs  event_state.rs  extensions.rs  mod.rs
aether-core/src/features/events/infra/: in_memory_progress_bar_storage.rs  mod.rs  tauri_event_emitter.rs
aether-core/src/features/events/utils/: mod.rs  try_for_each_concurrent_with_progress.rs
aether-core/src/features/file_watcher/: mod.rs
aether-core/src/features/file_watcher/infra/: mod.rs  notify_adapter.rs
aether-core/src/features/instance/: mod.rs
aether-core/src/features/instance/app/: app_utils.rs  content_service.rs  create_instance.rs  create_instance_path_without_duplicates.rs  edit_instance.rs  get_instance.rs  get_merged_settings.rs  install_instance.rs  instance_manager_impl.rs  instance_service.rs  list_instances.rs  mod.rs  remove_instance.rs  resolve_launch_settings.rs
aether-core/src/features/instance/core/: content_type.rs  instance.rs  mod.rs
aether-core/src/features/instance/domain/: content.rs  content_metadata_storage.rs  extensions.rs  instance.rs  instance_manager.rs  instance_storage.rs  mod.rs  pack.rs  provider_registry.rs
aether-core/src/features/instance/infra/: event_emitting_instance_storage.rs  fs_content_metadata_storage.rs  fs_instance_storage.rs  fs_pack_storage.rs  fs_watcher.rs  instance_event_handler.rs  mod.rs
aether-core/src/features/java/: mod.rs
aether-core/src/features/java/app/: constants.rs  construct_java_from_jre.rs  error.rs  get_java.rs  install_java.rs  install_jre.rs  mod.rs  service.rs
aether-core/src/features/java/application/: mod.rs  service.rs  storage.rs
aether-core/src/features/java/domain/: error.rs  java.rs  java_error.rs  jre_error.rs  mod.rs  storage.rs
aether-core/src/features/java/infra/: azul_jre_provider.rs  azul_provider.rs  constants.rs  error_converter.rs  fs_java_installation_service.rs  fs_java_storage.rs  mod.rs  properties.rs
aether-core/src/features/java/infrastructure/: azul_provider.rs  fs_java_storage.rs  mod.rs
aether-core/src/features/launcher/: download.rs  launch.rs  library.rs  mod.rs
aether-core/src/features/minecraft/: mod.rs
aether-core/src/features/plugins/: mod.rs
aether-core/src/features/process/: mod.rs
aether-core/src/features/settings/: mod.rs
aether-core/src/jre/: download.rs  mod.rs  provider.rs  service.rs
aether-core/src/jre/providers/: azul.rs
aether-core/src/jre/utils/: check.rs  jre_error.rs  platform.rs
aether-core/src/launcher/: download.rs  launch.rs  library.rs  mod.rs  mod_loaders.rs
aether-core/src/launcher/args/: jvm.rs  minecraft.rs  mod.rs  modded.rs  utils.rs
aether-core/src/launcher/mod_loaders/: common.rs  forge.rs  mod.rs
aether-core/src/shared/: mod.rs
aether-core/src/shared/domain/: cached_value.rs  fetch.rs  mod.rs  request_client.rs  use_case.rs
aether-core/src/shared/extensions/: daedalus_os_ext.rs  mod.rs  request_client_ext.rs
aether-core/src/shared/infra/: async_fs_db.rs  fetch.rs  fetch_new.rs  io.rs  json_entity_store.rs  json_value_store.rs  memory_capability_registry.rs  mod.rs  reqwest_client.rs  storage_error.rs  system.rs
aether-core/src/shared/utils/: execute_async.rs  hash.rs  java.rs  mod.rs  with_mut_ref.rs
aether-core/src/state/: account.rs  db.rs  event_state.rs  fs_watcher.rs  hooks.rs  java.rs  launcher_state.rs  location_info.rs  minecraft_auth.rs  mod.rs  output.rs  settings.rs
aether-core/src/state/cache/: cache_types.rs  cache_value.rs  mod.rs
aether-core/src/state/instance/: content.rs  content_type.rs  default_instance.rs  import.rs  install_stage.rs  mod.rs  pack.rs
aether-core/src/state/plugin/: _launcher_plugin.rs  cache.rs  host_functions.rs  instance_plugin.rs  instance_plugin_metadata.rs  launcher_plugin.rs  mod.rs  packwiz_plugin.rs  plugin_event.rs  plugin_manager.rs  plugin_metadata.rs  plugin_settings.rs  plugin_state.rs
aether-core/src/state/process/: minecraft_process.rs  mod.rs  process.rs  process_manager.rs
aether-core/src/utils/: builder.rs  fetch.rs  file.rs  io.rs  minecraft.rs  mod.rs  platform.rs  plugin.rs
aether-core/src/utils/jre/: check.rs  mod.rs
serializable_error_tests/: Cargo.toml
serializable_error_tests/src/tests/fixtures/: nested.rs  nested_with_fields.rs  simple.rs  simple_with_name.rs  with_fields.rs
(+539 files in other folders)
