[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }

anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = "0.12.5"
tokio = { version = "1.39.2", features = ["full"] }

daedalus = "0.2.2"
