[package]
name = "aether-core-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
# inventory = "0.3"
# schemars = "1.1.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# register-schema = { path = "../register-schema" }
# aether-core = { path = "../aether-core" }

[build-dependencies]
inventory = "0.3"
schemars = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aether-core = { path = "../aether-core" }
register-schema = { path = "../register-schema" }
