[package]
name = "aether-core"
version = "0.1.4"
edition = "2021"

[features]
# tauri = ["dep:tauri"]
cli = ["dep:indicatif"]

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
log = "0.4.22"

lazy_static = "1.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }

reqwest = { version = "0.12.5", features = [
    "json",
    "stream",
    "deflate",
    "gzip",
    "brotli",
] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"

bytes = "1.6.1"
url = "2.5.2"
futures = "0.3.30"
regex = "1.10.5"
sys-info = "0.9.1"

daedalus = { version = "0.2.3" }
tracing = "0.1.40"
thiserror = "1.0.63"
zip = "2.2.0"
chrono = "0.4.38"
dunce = "1.0.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }

tauri = { version = "2" }
indicatif = { version = "0.17.3", optional = true }
async-event-emitter = "0.1.3"
event-emitter-rs = "0.1.4"
sha1_smol = { version = "1.0.1", features = ["alloc", "serde", "std"] }
tracing-error = "0.2.0"
serde_ini = "0.2.0"
async_zip = "0.0.17"
async-trait = "0.1.83"
toml = "0.8.19"
