[package]
name = "aether-core"
version = "0.3.3"
edition = "2021"

[features]
# tauri = ["dep:tauri"]
cli = ["dep:indicatif"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
tauri = { version = "2" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"

anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
tracing = "0.1.40"
tracing-error = "0.2.0"
log = "0.4"

reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "deflate",
    "gzip",
    "brotli",
] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2.0"
toml = "0.8.19"

daedalus = "0.2.3"

uuid = { version = "1.10", features = ["serde", "v4"] }

bytes = "1.6"
chrono = "0.4"
sys-info = "0.9"
url = "2.5"

regex = "1.10"
dunce = "1"

zip = "2.2"
async_zip = "0.0.17"

lazy_static = "1.5.0"
phf = { version = "0.11.3", features = ["macros"] }
dashmap = { version = "6", features = ["serde"] }

async-event-emitter = "0.1.3"
async-trait = "0.1.83"

notify = "8.0.0"
notify-debouncer-mini = "0.6.0"

sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros"] }
indicatif = { version = "0.17.3", optional = true }
sha1_smol = { version = "1.0.1", features = ["alloc", "serde", "std"] }
paste = "1.0.15"
