[package]
name = "aether-core"
version = "0.7.3"
edition = "2021"

[features]
# tauri = ["dep:tauri"]
cli = ["dep:indicatif"]

[dependencies]
tauri = { version = "2" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"

anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2"
tracing-subscriber = "0.3"
log = "0.4"

reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "deflate",
    "gzip",
    "brotli",
] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2.0"
toml = "0.8.19"

daedalus = "0.2.3"

uuid = { version = "1.10", features = ["serde", "v4"] }

bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.35.2"
sys-info = "0.9"
url = "2.5"

regex = "1.10"
dunce = "1"

zip = "4.2.0"
async_zip = "0.0.17"

lazy_static = "1.5.0"
dashmap = { version = "6", features = ["serde"] }

async-event-emitter = "0.1.3"
async-trait = "0.1.83"

notify = "8.0.0"
notify-debouncer-mini = "0.6.0"

indicatif = { version = "0.17.3", optional = true }
sha1_smol = { version = "1.0.1", features = ["alloc", "serde", "std"] }
extism = "1.10.0"
mime = "0.3.17"
extism-convert = "1.10.0"
path-slash = "0.2.1"
serde_qs = "0.15.0"
semver = "1.0.26"

serr = { git = 'https://github.com/MangriMen/serr.git', version = "0.2.0", features = [
    "derive",
] }
serde_with = "3.13.0"
tempfile = "3.23.0"

aether-core-plugin-api = { path = "../aether-core-plugin-api" }
