[package]
name = "serializable_error_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serializable_error = { path = "../serializable_error" }
serializable_error_derive = { path = "../serializable_error_derive" }
thiserror = "2.0.12"
trybuild = "1.0.105"
